# inspector

./: Cargo.toml  README.md
docs/: status.drawio
src/: adam.rs  api.rs  lib.rs  main.rs  module.rs  tfls.rs  utils.rs  v2.rs
src/adam/: inspect.rs  spec.rs
src/api/: adam.rs  module.rs  sdtm.rs  tfls.rs
src/inspector/: inspector.rs
src/module/: file.rs  group.rs  item.rs  module.rs  paths.rs
src/sdtm/: inspect.rs  spec.rs
src/tfls/: inspect.rs  top.rs
src/utils/: infer.rs
src/v2/: category.rs  config.rs  error.rs  inspect.rs  investigator.rs  product.rs  purpose.rs  sequence.rs  trial.rs
src/v2/config/: adam.rs  reader.rs  sdtm.rs  tfl.rs
src/v2/inspect/: inspector.rs  result.rs
src/v2/inspect/inspector/: adam.rs  sdtm.rs  tfl.rs
src/v2/investigator/: adam.rs  investigator.rs  sdtm.rs  tfl.rs  utils.rs
src/v2/sequence/: adam.rs  audit.rs  sdtm.rs  tfl.rs
